Errors/Invalid requests handlers created + added 12 API endpoints for the DevApiDocumentation
