# storage/api-docs/api-docs.json
@@ -13,19 +13,79 @@
         "version": "1.0.0"
     },
     "paths": {
-        "prueba": {
+        "/api/provsMunsBasic": {
             "get": {
                 "tags": [
-                    "prueba"
+                    "Provincia Municipio Basic"
                 ],
-                "summary": "Get prueba",
-                "description": "Get prueba",
-                "operationId": "prueba",
+                "summary": "Get provincia and municipio basic data",
+                "description": "Get provincia and municipio basic data \r\n *      WARNING! Large body response, so it could take a while. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getProvMunsBasicData",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            }
+        },
+        "/api/provsMunsUltraBasic": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Basic"
+                ],
+                "summary": "Get provincia and municipio ultra basic data",
+                "description": "Get provincia and municipio ultra basic data (provincias and municipios)\r\n *      WARNING! Large body response, so it could take a while. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getProvMunsUltraBasicData",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            }
+        },
+        "/api/munsBasic": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Basic"
+                ],
+                "summary": "Get municipios basic data",
+                "description": "Get municipios basic data",
+                "operationId": "getMunicipiosBasic",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            }
+        },
+        "/api/provsBasic": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Basic"
+                ],
+                "summary": "Get provincias basic data",
+                "description": "Get provincias basic data\r\n *      WARNING! Large body response, so it could take a while. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getProvinciasBasic",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            }
+        },
+        "/api/munsOf/{provincia}": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Basic"
+                ],
+                "summary": "Get 'Municipios' basic data from a given 'Provincia'",
+                "description": "Get 'Municipios' basic data from a given 'Provincia'\r\n *      WARNING! Large body response, so it could take a while. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getMunsFromProv",
                 "parameters": [
                     {
-                        "name": "api_token",
-                        "in": "query",
-                        "description": "API TOKEN Authentication",
+                        "name": "provincia",
+                        "in": "path",
+                        "description": "Nombre de la provincia",
                         "required": true,
                         "schema": {
                             "type": "string"
@@ -35,6 +95,210 @@
                 "responses": {
                     "200": {
                         "description": "Successful operation"
+                    },
+                    "406": {
+                        "description": "No information was found with those names."
+                    }
+                }
+            }
+        },
+        "/api/munsPoblationOrdered/{poblacion}": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Advance"
+                ],
+                "summary": "Get 'Municipios' ordered by given 'Population'",
+                "description": "Get 'Municipios' ordered by given 'Population'\r\n *      WARNING! Large body response, so it could take a while depending of the number supplied. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getMunsPoblacionBasedOrdered",
+                "parameters": [
+                    {
+                        "name": "poblacion",
+                        "in": "path",
+                        "description": "Numero de habitantes maximos",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request. Invalid format."
+                    }
+                }
+            }
+        },
+        "/api/munsOfPoblationOrdered/{provincia}/{poblacion}": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Advance"
+                ],
+                "summary": "Get 'Municipios' from given 'PROVINCIA' ordered by given 'Population'",
+                "description": "Get 'Municipios' from given 'PROVINCIA' ordered by given 'Population'\r\n *      WARNING! Large body response, so it could take a while depending of the number supplied. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getMunsFromProvPoblacionBasedOrdered",
+                "parameters": [
+                    {
+                        "name": "provincia",
+                        "in": "path",
+                        "description": "Nombre de la provincia",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "poblacion",
+                        "in": "path",
+                        "description": "Numero de habitantes maximos",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request. Invalid format."
+                    },
+                    "406": {
+                        "description": "No information was found with those names."
+                    }
+                }
+            }
+        },
+        "/api/munsEv": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Advance"
+                ],
+                "summary": "Get 'Municipios' considered from 'España Vacia'",
+                "description": "Get 'Municipios' considered from 'España Vacia'\r\n *      WARNING! Large body response, so it could take a while. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getMunsEv",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            }
+        },
+        "/api/munsEvOf/{provincia}": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Advance"
+                ],
+                "summary": "Get 'Municipios' from a given 'Provincia' considered from 'España Vacia'",
+                "description": "Get 'Municipios' from a given 'Provincia' considered from 'España Vacia'\r\n *      WARNING! Large body response, so it could take a while. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getMunsFromProvEV",
+                "parameters": [
+                    {
+                        "name": "provincia",
+                        "in": "path",
+                        "description": "Nombre de la provincia",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "406": {
+                        "description": "No information was found with those names."
+                    }
+                }
+            }
+        },
+        "/api/munsEvOrderedOf/{provincia}": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Advance"
+                ],
+                "summary": "Get 'Municipios' from a given 'Provincia' considered from 'España Vacia' ordered by 'Poblacion'",
+                "description": "Get 'Municipios' from a given 'Provincia' considered from 'España Vacia' ordered by 'Poblacion'\r\n *      WARNING! Large body response, so it could take a while. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getMunsFromProvEVOrdered",
+                "parameters": [
+                    {
+                        "name": "provincia",
+                        "in": "path",
+                        "description": "Nombre de la provincia",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "406": {
+                        "description": "No information was found with those names."
+                    }
+                }
+            }
+        },
+        "/api/provMunCodesOf/{provincia}": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Advance"
+                ],
+                "summary": "Get 'Provincia' and 'Municipios' 'Codes' from given 'Provincia'",
+                "description": "Get 'Provincia' and 'Municipios' 'Codes' from given 'Provincia'\r\n *      WARNING! Large body response, so it could take a while. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getCodesFromMun",
+                "parameters": [
+                    {
+                        "name": "provincia",
+                        "in": "path",
+                        "description": "Nombre de la provincia",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "406": {
+                        "description": "No information was found with those names."
+                    }
+                }
+            }
+        },
+        "/api/provMunCoordinatesOf/{provincia}": {
+            "get": {
+                "tags": [
+                    "Provincia Municipio Advance"
+                ],
+                "summary": "Get 'Provincia' and 'Municipios' 'Coordinates' from given 'Provincia'",
+                "description": "Get 'Provincia' and 'Municipios' 'Coordinates' from given 'Provincia'\r\n *      WARNING! Large body response, so it could take a while. Instead is recommended to see the API endpoint directly on the URL.",
+                "operationId": "getCoordinatesFromMun",
+                "parameters": [
+                    {
+                        "name": "provincia",
+                        "in": "path",
+                        "description": "Nombre de la provincia",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "406": {
+                        "description": "No information was found with those names."
                     }
                 }
             }
@@ -45,7 +309,7 @@
                     "Tripadvisor"
                 ],
                 "summary": "Get tripadvisor main content",
-                "description": "Get tripadvisor content based on place info",
+                "description": "Get tripadvisor content based on place info (provincia and municipio)",
                 "operationId": "getTrip",
                 "parameters": [
                     {
@@ -82,6 +346,9 @@
                     },
                     "401": {
                         "description": "Unauthenticated"
+                    },
+                    "406": {
+                        "description": "No information was found with those names."
                     }
                 }
             }
@@ -89,7 +356,7 @@
         "/api/tripCard{cardLink?}{api_token?}": {
             "get": {
                 "tags": [
-                    "Tripadvisor Card"
+                    "Tripadvisor"
                 ],
                 "summary": "Get Tripadvisor Card inner content",
                 "description": "Get Tripadvisor card inner content based on a card link",
@@ -117,6 +384,9 @@
                 "responses": {
                     "200": {
                         "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request. Invalid format."
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -167,6 +437,12 @@
                     },
                     "401": {
                         "description": "Unauthenticated"
+                    },
+                    "406": {
+                        "description": "No information was found with those names."
+                    },
+                    "503": {
+                        "description": "Service Unavailable. Due to a TimeoutException when trying to collect the page data"
                     }
                 }
             }
@@ -174,7 +450,7 @@
         "/api/ideaCard{cardLink?}{api_token?}": {
             "get": {
                 "tags": [
-                    "Idealista Card"
+                    "Idealista"
                 ],
                 "summary": "Get Idealista Card inner content",
                 "description": "Get idealista card inner content based on a card link",
@@ -203,8 +479,14 @@
                     "200": {
                         "description": "Successful operation"
                     },
+                    "400": {
+                        "description": "Bad request. Invalid format."
+                    },
                     "401": {
                         "description": "Unauthenticated"
+                    },
+                    "503": {
+                        "description": "Service Unavailable. Due to a TimeoutException when trying to collect the page data"
                     }
                 }
             }
